name:                vigenere
version:             0.1
synopsis:            A Vigenère cipher encrypter/decrypter in Haskell
homepage:            https://github.com/RyanGlScott/vigenere
bug-reports:         https://github.com/RyanGlScott/vigenere/issues
license:             GPL-3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@ku.edu>
copyright:           (C) 2015 Ryan Scott
category:            Cryptography
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          dict/dict.txt

source-repository head
  type:                git
  location:            git://github.com/RyanGlScott/vigenere

library
  exposed-modules:     Crypto.Cipher.Vigenere
  build-depends:       base >= 3
                     , text >= 0.11.3.1
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable vigenere-toy
  main-is:             Toy.hs
  build-depends:       base     >= 3
                     , text     >= 0.11.3.1
                     , vigenere >= 0.1
  hs-source-dirs:      toy
  default-language:    Haskell2010
  ghc-options:         -Wall

executable vigenere-password-cracker
  main-is:             PasswordCracker.hs
  other-modules:       Paths_vigenere
  build-depends:       base                 >= 3
                     , text     >= 0.11.3.1
                     , unordered-containers >= 0.2
                     , vigenere             >= 0.1
  hs-source-dirs:      password-cracker
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
